java 9 factory method for sets